支持文件转发，修复镜像构建错乱问题